# image_sharing

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  reqs.tmp.txt
.github/workflows/: ci.yaml
api/: .coverage  coverage.cfg  pyproject.toml
api/docker/: Dockerfile.build  Dockerfile.test
api/src/: app.py
api/src/db/: database.py
api/src/dtos/: follow_request.py  image_post.py  like_post.py  user.py  user_profile.py
api/src/migrations/versions/: 039e63e334d4_create_initial_migration.py  4ff72467e25d_user_post_relationship_with_mappings_.py  9bf67912f9c9_user_post_relationship.py  a3db5146c322_user_user_junction_table.py  d7f40ac9fa32_make_field_non_nullable.py  e45799a29c7b_rename_following_field.py  f4f90ed04a89_user_post_relationship_with_mappings_.py  (+2 more)
api/src/models/: follows_junction_table.py  image_model.py  likes_juction_table.py  user_model.py
api/src/repositories/: image_post_repository.py  like_repository.py  user_repository.py
api/tests/integration/: conftest.py  test_follows.py  test_get_posts.py  test_like_post.py  test_mutual_follows.py  test_post_image.py  test_shareable_link.py  test_user_profile.py
docker/: Dockerfile.build
inference_service/: pyproject.toml  requirements.txt  requirements.txt.generated  script.py  script_2.py
inference_service/docker/: Dockerfile.build
inference_service/src/: app.py  caption_controller.py  controller.py  dependency_injection.py  dtos.py  script_hf.py
inference_service/src/controllers/: caption_controller.py  classifier_controller.py
inference_service/src/migrations/versions/: bce64b0d0e91_user_post_relationship_with_mappings_.py
inference_service/src/models/: user_model.py
inference_service/tests/: test_caption.py  test_classification.py
scripts/: attach-db.sh  bash-ai.sh  bash.sh  build.sh  coverage-tests.sh  format.sh  inference-tests.sh  migrate-head.sh  send_hedgehog.sh  static-tests.sh
src/: app.py
src/db/: database.py
src/dtos/: image_post.py
src/migrations/: env.py
src/migrations/versions/: 039e63e334d4_create_initial_migration.py  0b470056e9ca_user_post_relationship_with_mappings_.py  0fd4da923257_add_basic_user.py  271d2a9549ea_user_user_junction_table_2.py  37e2a9f26779_use_timezone.py  4ff72467e25d_user_post_relationship_with_mappings_.py  92b8678fbb8f_rename_rows_on_images.py  9bf67912f9c9_user_post_relationship.py  a3db5146c322_user_user_junction_table.py  a814805dc71c_user_post_relationship_with_mappings_.py  bce64b0d0e91_user_post_relationship_with_mappings_.py  d59b86309513_add_link_uuid_field_to_image_post_model.py  f4f90ed04a89_user_post_relationship_with_mappings_.py  f534f761f3ce_user_post_relationship_with_mappings_.py  fe3f5d3c8968_user_post_relationship_with_mappings.py
src/models/: follows_junction_table.py  image.py  image_model.py  likes_juction_table.py  user_model.py
src/repositories/: follow_repository.py  image_post_repository.py  like_repository.py
tests/integration/: conftest.py  test_app.py  test_follows.py  test_get_posts.py  test_like_post.py  test_mutual_follows.py  test_post_image.py  test_shareable_link.py  test_signup_user.py
