[tool.poetry]
name = "image_sharing"
version = "0.1.0"
description = "Image sharing application"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.scripts]
include = "src/image_sharing"

[tool.poetry.dependencies]
python = "3.11.11"
python-dotenv = "^1.0.0"
pillow = "9.5.0"  # For image handling
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
numpy = "1.23.5"
tensorflow = "2.13.0"
tensorflow-hub = "0.14.0"


[tool.poetry.group.dev.dependencies]
black = "^24.1.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
pytest-cov = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py313']
include = '\.pyi?$'

[tool.coverage.report]
fail_under = 95
show_missing = true


[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 119

[tool.pytest.ini_options]
pythonpath = [
    'src/',
]
testpaths = ['tests/']
